--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <script src="https://kit.fontawesome.com/b4df3e9b2c.js" crossorigin="anonymous"></script>
+    
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital@1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link href='https://css.gg/arrow-right-o.css' rel='stylesheet'>
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
@@ -39,7 +41,7 @@
          <button class="btn" id="listbtn">Add</button></div></a>
     </div></div>
 
-    <a href="https://akshaay9.github.io/ToDo-page4/"><i class="fas fa-arrow-circle-right arrow fa-2x"></i></a>
+    <a href="https://akshaay9.github.io/ToDo-page4/"><i class="gg-arrow-right-o arrow"></i></a>
 
 
 
